add statistics endpoint; add content-type application/json in all endpoints
